# NCState_ECE566_Spring2019

./: .gitattributes  .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yml  travis-ci-test.sh
LectureCode/: Makefile
LectureCode/Lexer/: Makefile  Makefile.mac  words  words.c  words.lex
LectureCode/Parser/: Makefile  calc  calc.lex  calc.lex.c  calc.y  calc.y.c  calc.y.h
LectureCode/Review/: example.c  list.cpp  review.cpp
LectureCode/SDT/: Makefile  calc.lex  calc.y  calc2.y  main.c
LectureCode/examples/: Makefile
Tutorials/1/: Makefile  expr.lex  expr.y
Tutorials/2/C/: Makefile  expr.lex  expr.y
Tutorials/2/C++/: expr.lex  expr.y
Tutorials/3/C/: .#expr.lex  expr.lex  expr.y
Tutorials/3/C++/: Makefile  expr.lex  expr.y
Tutorials/4/C/: Makefile  t4.c
Tutorials/4/C++/: Makefile  t4.cpp
Tutorials/5/C/: Makefile  dce.c
Tutorials/5/C++/: Makefile  dce.cpp  tmp.c
installer/: README.md  cmake-install-llvm-debug.sh  cmake-install-llvm.sh
installer/docker/: build_docker_image.sh
installer/docker/example/: Dockerfile
installer/docker/ubuntu/: Dockerfile
installer/docker/ubuntu/test/: Dockerfile  docker-compose.yml
projects/: CMakeLists.txt
projects/include/: CSE.h  dominance.h  loop.h  summary.h
projects/lib/: CMakeLists.txt
projects/lib/analysis/: CMakeLists.txt  dominance.cpp  summary.c  summary.cpp
projects/lib/sample/: CMakeLists.txt
projects/lib/transform/: CMakeLists.txt
projects/lib/utils/: CMakeLists.txt  Makefile  valmap.cpp  worklist.cpp
projects/tools/: .gitignore  CMakeLists.txt
projects/tools/p0/: CMakeLists.txt  main.c  main.cpp
projects/tools/p1/: CMakeLists.txt  main.c  p1.lex  p1.y
projects/tools/p1cpp/: CMakeLists.txt  main.cpp  p1.y
projects/tools/p2/: CMakeLists.txt  minic.y
projects/tools/p2cpp/: CMakeLists.txt  main.cpp  minic.y
projects/tools/p3/: CMakeLists.txt
projects/tools/p3cpp/: CMakeLists.txt
projects/tools/p4/: CMakeLists.txt  main.cpp
simple/: Makefile
simple/p0/: Makefile  main.c
simple/p1/: Makefile
simple/p1/C/: Makefile  p1.y
simple/p1/C++/: Makefile  p1.lex
simple/p1/C++/tests/: Makefile  Makefile.P1  test_00.c  test_00.p1  test_01.c  test_01.p1  test_02.c  test_02.p1  test_03.p1  test_06.c  test_09.c
simple/p1/C/tests/: test_00.p1  test_01.p1  test_02.c  test_03.c  test_04.c  test_04.p1  test_05.c  test_08.c  test_08.p1
simple/p2/C/: Makefile  cmdline.lex  main.c  minic.lex  minic.y  symbol.c  symbol.h
simple/p2/C++/: Makefile  cmdline.lex  list.cpp  list.h  main.cpp  minic.lex  minic.y  symbol.cpp  symbol.h
simple/p2/C++/tests/: Makefile  Makefile.P2  summarize.py  test_01.c  test_05.c  test_06.p2  test_07.p2  test_11.p2  test_12.c  test_12.p2  test_13.c
simple/p2/C/tests/: Makefile.P2  test_00.c  test_02.p2  test_03.c  test_04.c  test_05.p2  test_07.c  test_07.p2  test_09.p2  test_10.c  test_12.c  test_14.c
simple/p3/C/: Makefile  main.c  summary-copy.c
simple/p3/C++/: Makefile  main.cpp
simple/p4/: Makefile
simple/p4/C/: CSE.c  CSE.h  Makefile  loop.cpp  main.cpp  summary.c  transform.cpp  transform.h  valmap.h
simple/p4/C++/: CSE.cpp  Makefile  Summary.hpp  cfg.cpp  cfg.h  main.cpp  summary.cpp  worklist.h
wolfbench/: .gitattributes  Make.rules.llvm  Makefile.Optimize  Makefile.P1  Makefile.P2  Makefile.P4Runs  Makefile.benchmark  Makefile.config.in  Makefile.defs.in  Makefile.in  Makefile.single  RunDiff.sh  RunSafely.sh  RunSafelyAndStable.sh  TimedExec.sh  configure  configure.ac  fullstats.py  stats.py  timing.py
wolfbench/Benchmarks/: Makefile.in
wolfbench/Benchmarks/CRC32/: Makefile.in  output_large.txt
wolfbench/Benchmarks/FFT/: Makefile.in  main.c  output_large.txt
wolfbench/Benchmarks/FIR/: Makefile.in  fir.c  in.c
wolfbench/Benchmarks/adpcm/: Makefile.in  rawdaudio.c
wolfbench/Benchmarks/adpcm/old/src/: .loopinfo.in  rawdaudio.c
wolfbench/Benchmarks/arm/: Makefile.in  arm.c  arm.output.stderr
wolfbench/Benchmarks/basicmath/: Makefile.in  basicmath_large.c  output_large.txt
wolfbench/Benchmarks/bh/: Makefile.in  README  args.c  code.h  defs.h  newbh.c  output.bh  stdinc.h  stdio.h  util.c  vectmath.h
wolfbench/Benchmarks/bisort/: Makefile.in  README  args.c  bitonic.c  constants.h  future-cell.h  mem-ref.h  node.h  proc.h  swap.c
wolfbench/Benchmarks/bitcount/: Makefile.in  bitcnts.c  bitcount.output_large.txt  bitcount.output_small.txt  output.bitcount
wolfbench/Benchmarks/bwmem/: Makefile.in  bench.h  bwmem.c  lib_timing.c  timing.h
wolfbench/Benchmarks/dijkstra/: Makefile.in  dijkstra_large.c
wolfbench/Benchmarks/em3d/: Makefile.in  README  args.c  constants.h  em3d.c  em3d.h  future-cell.h  main.c  make_graph.c  make_graph.h  output.em3d  util.c
wolfbench/Benchmarks/hanoi/: Makefile.in  hanoi.c
wolfbench/Benchmarks/kmp/: Makefile.in  kmp.c  output.kmp
wolfbench/Benchmarks/l2lat/: Makefile.in  l2lat.c  second_cpu.c
wolfbench/Benchmarks/mst/: Makefile.in  README  args.c  hash.c  hash.h  main.c  makegraph.c  mst.h
wolfbench/Benchmarks/patricia/: Makefile.in  output.patricia  patricia_test.c
wolfbench/Benchmarks/qsort/: Makefile.in  output.qsort
wolfbench/Benchmarks/sha/: Makefile.in  sha.c
wolfbench/Benchmarks/smatrix/: Makefile.in  output.smatrix  smatrix.c
wolfbench/Benchmarks/sqlite/: Makefile.in  output.sql  test.c
wolfbench/Benchmarks/susan/: Makefile.in  output_large.smoothing.pgm  susan.c
wolfbench/P1Tests/: Makefile.in  test_00.c  test_00.p1  test_01.p1  test_02.p1  test_03.p1  test_04.p1  test_05.c  test_05.p1  test_05.p2  test_06.c  test_06.p1  test_07.c  test_07.p1  test_08.c  test_08.p1  test_09.c  test_09.p1
wolfbench/P2Tests/: Makefile.in  test_00.p2  test_01.p2  test_02.c  test_03.p2  test_04.p2  test_06.c  test_08.c  test_08.p2  test_09.c  test_10.p2  test_11.c  test_12.c  test_12.p2  test_13.p2  test_14.p2
wolfbench/SimpleTests/: Makefile.in  hello.c
wolfbench/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
