add_subdirectory(p0)
if (use_c)
   add_subdirectory(p1)
   add_subdirectory(p2)
#   add_subdirectory(p2)
#   add_subdirectory(p3)
#   add_subdirectory(p4)
#   add_subdirectory(p5)
#   add_subdirectory(p6)
else()
   add_subdirectory(p1cpp)
   add_subdirectory(p2cpp)
#   add_subdirectory(p2cpp)
#   add_subdirectory(p3cpp)
#   add_subdirectory(p4)
#   add_subdirectory(p5)
#   add_subdirectory(p6)
endif()
